src/objects/Piece__c.object
<CustomObject>
    <fields>
        <fullName>Artist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Artist</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Artist</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Works</relationshipLabel>
        <relationshipName>Works</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asking_Price__c</fullName>
        <label>Asking Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Buyer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pieces</relationshipLabel>
        <relationshipName>Pieces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Image_Link__c</fullName>
        <label>Image Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number_of_Bids__c</fullName>
        <label>Number of Bids</label>
        <summaryForeignKey>Bid__c.Piece__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Color__c</fullName>
        <label>Primary Color</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Style__c</fullName>
        <label>Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abstract Expressionism</fullName>
                </value>
                <value>
                    <fullName>Art Noveau</fullName>
                </value>
                <value>
                    <fullName>Avant-garde</fullName>
                </value>
                <value>
                    <fullName>Baroque</fullName>
                </value>
                <value>
                    <fullName>Classicism</fullName>
                </value>
                <value>
                    <fullName>Conceptual Art</fullName>
                </value>
                <value>
                    <fullName>Constructivism</fullName>
                </value>
                <value>
                    <fullName>Cubism</fullName>
                </value>
                <value>
                    <fullName>Dada / Dadaism</fullName>
                </value>
                <value>
                    <fullName>Expressionism</fullName>
                </value>
                <value>
                    <fullName>Fauvism</fullName>
                </value>
                <value>
                    <fullName>Futurism</fullName>
                </value>
                <value>
                    <fullName>Impressionism</fullName>
                </value>
                <value>
                    <fullName>Installation Art</fullName>
                </value>
                <value>
                    <fullName>Land Art / Earth Art</fullName>
                </value>
                <value>
                    <fullName>Minimalism</fullName>
                </value>
                <value>
                    <fullName>Neo-Impressionalism</fullName>
                </value>
                <value>
                    <fullName>Neo-Classicism</fullName>
                </value>
                <value>
                    <fullName>Performance Art</fullName>
                </value>
                <value>
                    <fullName>Pointillism</fullName>
                </value>
                <value>
                    <fullName>Pop Art</fullName>
                </value>
                <value>
                    <fullName>Post-Impressionism</fullName>
                </value>
                <value>
                    <fullName>Rococo</fullName>
                </value>
                <value>
                    <fullName>Surrealism</fullName>
                </value>
                <value>
                    <fullName>Suprematism</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_Bid__c</fullName>
        <label>Top Bid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Piece</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vendor__c</columns>
        <columns>Size__c</columns>
        <columns>Top_Bid__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Piece Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pieces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>